--- a/startopdracht/index.html
+++ b/startopdracht/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,11 +9,149 @@
     <!-- Own CSS -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile.css">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
+    <title>Crudo|Organic Vegan Food Store</title>
+</head>
+
+<body>
     <!-- Your code goes here-->
-    <h1>Hello World!</h1>
-  </body>
+    <div class="hero">
+        <header>
+            <div class="container d-flex justify-content">
+                <img src="img/logo_white.svg">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="overons.html">Over Ons</a>
+                    <a href="eetcafe.html">Eetcafe</a>
+                    <a href="winkel.html">Winkel</a>
+                    <a href="menu.html">Menu</a>
+                    <a href="coaching.html">Coaching</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+
+            </div>
+        </header>
+        <div class="container video-container">
+            <div class="video">
+                hier komt de video
+            </div>
+        </div>
+
+        <div class="social-shit">
+            <div class="left">
+                <p>Burchtstraat 126</p>
+                <p>6511 RK Nijmegen</p>
+
+            </div>
+            <div class="right">
+
+            </div>
+        </div>
+    </div>
+
+    <section class="passie">
+        <div class="container d-flex two-columns">
+            <div class="left two-columns">
+                <img src="img/voorgevel.jpg" alt="voorgevel winkel" class="img">
+            </div>
+            <div class="right two-columns">
+                <h2>ONZE PASSIE</h2>
+                <p>Vanuit onze passie voor een gezonde en natuurvriendelijke leefstijl, is de droom ontstaan om een duurzaam, 100% plantaardig eetcafé met winkel te openen. In 2014 zijn wij gestart als Raw Food café maar hebben inmiddels ook een volledige
+                    warme kaart om een breed publiek te kunnen laten ervaren hoe compleet en lekker plantaardig eten is. Van vegan junkfood tot supergezonde Living Foods.</p>
+                <p>Daarnaast heeft een plantaardige levensstijl met biologische en lokale producten, een minimale belasting op het ecosysteem. Al onze gerechten zijn biologisch, onbewerkt en bovenal ambachtelijk bereid. Deze verwerkingsmethode verzekert
+                    het behoud van de voedingswaarde van het voedsel en het behoud van natuurlijke essentie en smaak van de ingrediënten. Wij weten uit ervaring hoe voeding je geest kan scherpen, je lichaam in vorm kan houden en je jong en energiek kan
+                    doen voelen. Deze ervaring willen we het liefst met iedereen delen. Niet voor niets noemen wij onszelf The Healthiest Place in Town.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="eetcafe">
+        <div class="container d-flex two-columns">
+            <div class="left two-columns">
+                <h2>EETCAFE</h2>
+                <p>Bij Crudo kunt u terecht voor een fair kopje Moyee koffie of thee met een “guilt free” stuk taart, vers geperste juices en smoothies en een heerlijke lunch of diner. Alle huisgemaakte gerechten zijn 100% plantaardig, maar ook biologisch,
+                    glutenvrij, lactosevrij en suikervrij. Neem ook gerust je laptop mee en maak gebruik van het open Wi-Fi-netwerk.</p>
+                <h3>TAKE AWAY</h3>
+                <p>Alles op onze kaart is ook To Go, liefst in je eigen meegebrachte verpakking. Ook voor de juices en smoothies kun je je eigen beker meenemen. Geniet van heerlijk verse producten die je een energieboost geven voor de rest van je dag!</p>
+                <a href="menu.html">Bekijk het menu</a>
+            </div>
+            <div class="right two-columns">
+                <img src="img/koffie.jpg">
+            </div>
+
+        </div>
+    </section>
+
+    <section class="winkel">
+        <div class="container d-flex two-columns">
+            <div class="left two-columns">
+                <h2>WINKEL</h2>
+                <p>In onze winkel vind je alles wat je nodig hebt voor het bereiden van lekker plantaardig eten thuis. De lekkere en gezonde alternatieven voor dierlijke producten waar je in ons eetcafé van geniet zijn te verkrijgen in de winkel. We hebben
+                    een gedeelte met biologische en fair zero-waste producten die je tapt uit silo’s. De verpakking neem je zelf mee. Op deze manier houden we de belasting op het ecosysteem zo laag mogelijk</p>
+                <img src="img/bessen.jpg">
+            </div>
+            <div class="right two-columns">
+                <img src="img/tomaat.jpg">
+                <h2>TARWEGRAS & SUPLEMENTEN</h2>
+                <p>Uit eigen ervaring weten wij dat tarwegras de nummer één op het gebied van gezonde voeding is. We verkopen diverse tarwegras producten, van één vers geperst shot tot een abonnement voor dagelijks vers tarwegras. In de winkel vind je tevens
+                    de meest essentiële voedingssupplementen.</p>
+                <p>Daarnaast verkopen we aardingsproducten. Deze artikelen gaan terug naar het basisprincipe van je gezondheid: het letterlijk geaard zijn.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="coaching">
+        <div class="container d-flex two-columns">
+            <div class="left two-columns">
+                <img src="img/tomaat.jpg">
+            </div>
+            <div class="right two-columns">
+                <h2>COACHING</h2>
+                <h3>JE GEZONDHEID & WELZIJN IN EIGEN HAND</h3>
+                <p>Ben jij op zoek naar een andere en vooral gezondere leefstijl of heb je persoonlijke thema’s? Wij staan voor je klaar! Door middel van persoonlijke begeleiding helpen we je de switch naar een gezondere leefstijl te maken. Je kunt bij ons
+                    terecht voor voedingsadvies, Touch of Matrix behandelingen en Holistische massage.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <div class="top">1</div>
+        <div class="middle">
+            <div class="container three-columns d-flex">
+                <div class="columns">
+                    <img src="img/logo_footer.svg" alt="logo_footer" class="img">
+                    <p>
+                        <h4>ADRES</h4>
+                    </p>
+                    <p>Burchtstraat 126</p>
+                    <p>6511 RK Nijmegen</p>
+                    <p>
+                        <h4>CONTACT</h4>
+                    </p>
+                    <p><span>Tel </span>024 8450 094</p>
+                    <p><span>Tel </span>024 8450 094</p>
+                    <p><span>Mail </span>info@crudo.nl</p>
+                    <p><span>KVK </span>61718815</p>
+                    <p><span>Bank </span>NL35 TRIO 0197 985041</p>
+
+                </div>
+                <div class="columns">2</div>
+                <div class="columns">3</div>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="container">
+                © Crudo 2020 | Design by Byron Reclamebureau
+
+            </div>
+        </div>
+    </footer>
+
+
+</body>
+
 </html>
