--- a/startopdracht/index.html
+++ b/startopdracht/index.html
@@ -34,17 +34,18 @@
         </header>
         <div class="container video-container">
             <div class="video">
-                hier komt de video
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dChIO96qyeM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
             </div>
         </div>
 
-        <div class="social-shit">
-            <div class="left">
+        <div class="social-shit justify-content d-flex">
+            <div class="adress">
                 <p>Burchtstraat 126</p>
                 <p>6511 RK Nijmegen</p>
 
             </div>
-            <div class="right">
+            <div class="socialm text-aline-right">
+                <p>1 2 3</p>
 
             </div>
         </div>
@@ -52,11 +53,12 @@
 
     <section class="passie">
         <div class="container d-flex two-columns">
-            <div class="left two-columns">
-                <img src="img/voorgevel.jpg" alt="voorgevel winkel" class="img">
+            <div class="left">
+                <img src="img/voorgevel.jpg" alt="voorgevel winkel" class="img-fluid">
             </div>
-            <div class="right two-columns">
+            <div class="right">
                 <h2>ONZE PASSIE</h2>
+                <hr>
                 <p>Vanuit onze passie voor een gezonde en natuurvriendelijke leefstijl, is de droom ontstaan om een duurzaam, 100% plantaardig eetcafé met winkel te openen. In 2014 zijn wij gestart als Raw Food café maar hebben inmiddels ook een volledige
                     warme kaart om een breed publiek te kunnen laten ervaren hoe compleet en lekker plantaardig eten is. Van vegan junkfood tot supergezonde Living Foods.</p>
                 <p>Daarnaast heeft een plantaardige levensstijl met biologische en lokale producten, een minimale belasting op het ecosysteem. Al onze gerechten zijn biologisch, onbewerkt en bovenal ambachtelijk bereid. Deze verwerkingsmethode verzekert
@@ -66,34 +68,49 @@
 
         </div>
     </section>
-
     <section class="eetcafe">
+        <div class="container">
+            <img src="img/eetcafe.jpg" alt="eetcafe" class="img-fluid">
+        </div>
+
+    </section>
+
+    <section class="take-away">
         <div class="container d-flex two-columns">
-            <div class="left two-columns">
+            <div class="left">
                 <h2>EETCAFE</h2>
+                <hr>
                 <p>Bij Crudo kunt u terecht voor een fair kopje Moyee koffie of thee met een “guilt free” stuk taart, vers geperste juices en smoothies en een heerlijke lunch of diner. Alle huisgemaakte gerechten zijn 100% plantaardig, maar ook biologisch,
                     glutenvrij, lactosevrij en suikervrij. Neem ook gerust je laptop mee en maak gebruik van het open Wi-Fi-netwerk.</p>
                 <h3>TAKE AWAY</h3>
                 <p>Alles op onze kaart is ook To Go, liefst in je eigen meegebrachte verpakking. Ook voor de juices en smoothies kun je je eigen beker meenemen. Geniet van heerlijk verse producten die je een energieboost geven voor de rest van je dag!</p>
-                <a href="menu.html">Bekijk het menu</a>
+                <a href="menu.html" class="button">Bekijk het menu</a>
             </div>
-            <div class="right two-columns">
+            <div class="right">
                 <img src="img/koffie.jpg">
             </div>
 
         </div>
     </section>
 
-    <section class="winkel">
-        <div class="container d-flex two-columns">
-            <div class="left two-columns">
+    <section class="banaan">
+        <div class="container">
+            <img src="img/winkel.jpg" alt="eetcafe " class="img-fluid">
+        </div>
+
+    </section>
+
+    <section class="winkel ">
+        <div class="container d-flex two-columns ">
+            <div class="left">
                 <h2>WINKEL</h2>
+                <hr>
                 <p>In onze winkel vind je alles wat je nodig hebt voor het bereiden van lekker plantaardig eten thuis. De lekkere en gezonde alternatieven voor dierlijke producten waar je in ons eetcafé van geniet zijn te verkrijgen in de winkel. We hebben
                     een gedeelte met biologische en fair zero-waste producten die je tapt uit silo’s. De verpakking neem je zelf mee. Op deze manier houden we de belasting op het ecosysteem zo laag mogelijk</p>
-                <img src="img/bessen.jpg">
+                <img src="img/bessen.jpg ">
             </div>
-            <div class="right two-columns">
-                <img src="img/tomaat.jpg">
+            <div class="right">
+                <img src="img/tomaat.jpg ">
                 <h2>TARWEGRAS & SUPLEMENTEN</h2>
                 <p>Uit eigen ervaring weten wij dat tarwegras de nummer één op het gebied van gezonde voeding is. We verkopen diverse tarwegras producten, van één vers geperst shot tot een abonnement voor dagelijks vers tarwegras. In de winkel vind je tevens
                     de meest essentiële voedingssupplementen.</p>
@@ -103,12 +120,66 @@
         </div>
     </section>
 
-    <section class="coaching">
+    <section class="gember">
+        <div class="container">
+            <img src="img/menu.jpg" alt="menu" class="img-fluid">
+        </div>
+
+    </section>
+
+    <section class="price-table">
         <div class="container d-flex two-columns">
-            <div class="left two-columns">
-                <img src="img/tomaat.jpg">
+            <div class="right">
+                <table>
+                    <tr>
+                        <td>DUTCH WEEDBURGER</td>
+                        <td>€14.95</td>
+                    </tr>
+                    <tr>
+                        <td>ACAI BOWL</td>
+                        <td>€5.95</td>
+                    </tr>
+                    <tr>
+                        <td>SEA NUGGETS</td>
+                        <td>€8.95</td>
+                    </tr>
+                </table>
             </div>
-            <div class="right two-columns">
+            <div class="left">
+                <table>
+                    <tr>
+                        <td>KOOLHYDRAAT ARME SANDWICH</td>
+                        <td>€7.50</td>
+                    </tr>
+                    <tr>
+                        <td>PECANTAART</td>
+                        <td>€5.20</td>
+                    </tr>
+                    <tr>
+                        <td>BROODJE SUPER GEZOND</td>
+                        <td>€8</td>
+                    </tr>
+                </table>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="coaching1">
+        <div class="container">
+            <img src="img/coaching.jpg" alt="coaching" class="img-fluid">
+        </div>
+
+    </section>
+
+    <section class="coaching ">
+        <div class="container d-flex two-columns ">
+            <div class="left two-columns ">
+                <img src="img/radijs.jpg ">
+            </div>
+            <div class="right">
                 <h2>COACHING</h2>
                 <h3>JE GEZONDHEID & WELZIJN IN EIGEN HAND</h3>
                 <p>Ben jij op zoek naar een andere en vooral gezondere leefstijl of heb je persoonlijke thema’s? Wij staan voor je klaar! Door middel van persoonlijke begeleiding helpen we je de switch naar een gezondere leefstijl te maken. Je kunt bij ons
@@ -118,12 +189,18 @@
         </div>
     </section>
 
+    <section class="maps">
+        <a href="www.google.com/maps">BEKIJK ONS OP GOOGLE MAPS</a>
+
+    </section>
+
     <footer>
-        <div class="top">1</div>
-        <div class="middle">
-            <div class="container three-columns d-flex">
-                <div class="columns">
-                    <img src="img/logo_footer.svg" alt="logo_footer" class="img">
+        <div class="top ">
+        </div>
+        <div class="middle ">
+            <div class="container three-columns d-flex ">
+                <div class="columns ">
+                    <img src="img/logo_footer.svg " alt="logo_footer " class="img-fluid">
                     <p>
                         <h4>ADRES</h4>
                     </p>
@@ -139,12 +216,22 @@
                     <p><span>Bank </span>NL35 TRIO 0197 985041</p>
 
                 </div>
-                <div class="columns">2</div>
-                <div class="columns">3</div>
+                <div class="columns2 ">
+                    <p>Openingstijden</p>
+                    <p><span>Maandag</span>11.30-17 uur</p>
+                    <p><span>Dinsdag</span>Gesloten</p>
+                    <p><span>Woensdag</span>11.30-17 uur</p>
+                    <p><span>Donderdag</span>11.30-21 uur</p>
+                    <p><span>Vrijdag</span>11.30-21 uur</p>
+                    <p><span>Zaterdag</span>10.30-21 uur</p>
+                    <p><span>Zondag</span>Gesloten</p>
+                    <p>Buiten de openingstijden langskomen kan op aanvraag.</p>
+                </div>
+                <div class="columns ">3</div>
             </div>
         </div>
-        <div class="bottom">
-            <div class="container">
+        <div class="bottom ">
+            <div class="container ">
                 © Crudo 2020 | Design by Byron Reclamebureau
 
             </div>
