--- a/startopdracht/index.html
+++ b/startopdracht/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Crudo|Organic Vegan Food Store</title>
 </head>
@@ -45,7 +46,14 @@
 
             </div>
             <div class="socialm text-aline-right">
-                <p>1 2 3</p>
+                <ul>
+                    <li><i class="fa fa-facebook" aria-hidden="true"></i>
+                    </li>
+                    <li><i class="fa fa-instagram" aria-hidden="true"></i>
+                    </li>
+                    <li><i class="fa fa-envelope" aria-hidden="true"></i>
+                    </li>
+                </ul>
 
             </div>
         </div>
@@ -112,6 +120,7 @@
             <div class="right">
                 <img src="img/tomaat.jpg ">
                 <h2>TARWEGRAS & SUPLEMENTEN</h2>
+                <hr>
                 <p>Uit eigen ervaring weten wij dat tarwegras de nummer één op het gebied van gezonde voeding is. We verkopen diverse tarwegras producten, van één vers geperst shot tot een abonnement voor dagelijks vers tarwegras. In de winkel vind je tevens
                     de meest essentiële voedingssupplementen.</p>
                 <p>Daarnaast verkopen we aardingsproducten. Deze artikelen gaan terug naar het basisprincipe van je gezondheid: het letterlijk geaard zijn.</p>
@@ -181,6 +190,7 @@
             </div>
             <div class="right">
                 <h2>COACHING</h2>
+                <hr>
                 <h3>JE GEZONDHEID & WELZIJN IN EIGEN HAND</h3>
                 <p>Ben jij op zoek naar een andere en vooral gezondere leefstijl of heb je persoonlijke thema’s? Wij staan voor je klaar! Door middel van persoonlijke begeleiding helpen we je de switch naar een gezondere leefstijl te maken. Je kunt bij ons
                     terecht voor voedingsadvies, Touch of Matrix behandelingen en Holistische massage.</p>
@@ -195,8 +205,7 @@
     </section>
 
     <footer>
-        <div class="top ">
-        </div>
+
         <div class="middle ">
             <div class="container three-columns d-flex ">
                 <div class="columns ">
@@ -216,7 +225,7 @@
                     <p><span>Bank </span>NL35 TRIO 0197 985041</p>
 
                 </div>
-                <div class="columns2 ">
+                <div class="columns ">
                     <p>Openingstijden</p>
                     <p><span>Maandag</span>11.30-17 uur</p>
                     <p><span>Dinsdag</span>Gesloten</p>
@@ -232,7 +241,7 @@
         </div>
         <div class="bottom ">
             <div class="container ">
-                © Crudo 2020 | Design by Byron Reclamebureau
+                © Crudo 2020 | Design by Ravalli Andrea
 
             </div>
         </div>
